[package]
name = "rustkernel"
version = "0.1.0"
edition = "2021"

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
bitflags = "2.6.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"

[dependencies.bootloader]
version = "0.9"
features = ["map_physical_memory"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args =  [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial", "stdio", "-display", "none"
]
run-args = [
	"-enable-kvm" #"-d", "cpu_reset"
]
test-success-exit-code = 33  # (0x10 << 1) | 1

[[test]]
name = "stack_overflow"
harness = false
